# project-velmira

./: .gitignore  DEVLOG.md  LICENCE  README.md  project-velmira.code-workspace  pyproject.toml  requirements.txt  test.txt
src/: auditor.py  chat.py  config.py  core.py  docs.py  main.py
